atualizando com restante das páginas

--- a/index.html
+++ b/index.html
@@ -1041,20 +1041,22 @@
                 </div>
                 <div class="col-xs-12 col-md-4 padding0 padding-rg-18-md0">
                   <div class="packageTravelDestinyNav bck-0d1e3d justify-content-between d-flex flex-column">
-                    <div class="font-25-20 color-ffffff normal text-left d-flex line-height-1">
+                    <div class="font-25-20 linkDstv normal text-left d-flex line-height-1">
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft-min.png"
-                        class="align-self-center padding-rg-10" alt="">
+                        class="align-self-center padding-rg-10 linkDstv" style="opacity: 0.1;" alt="">
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
+                        <div class="font-25-20 normal decoration-none linkDstv">
                           Destino<br />
                           anterior
-                        </a>
+                        </div>
                       </div>
                     </div>
                     <div class="font-25-20 color-53b7f2 bold text-right d-flex align-self-end line-height-1">
 
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-53b7f2 bold decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'Maceio'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Maceio"
+                          class="font-25-20 color-53b7f2 bold decoration-none">
                           Próximo<br />
                           destino
                         </a>
@@ -1500,7 +1502,9 @@
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft-min.png"
                         class="align-self-center padding-rg-10" alt="">
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'Foz'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Foz"
+                          class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
                         </a>
@@ -1509,7 +1513,9 @@
                     <div class="font-25-20 color-53b7f2 bold text-right d-flex align-self-end line-height-1">
 
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-53b7f2 bold decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'Natal'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Natal"
+                          class="font-25-20 color-53b7f2 bold decoration-none">
                           Próximo<br />
                           destino
                         </a>
@@ -1958,7 +1964,9 @@
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft-min.png"
                         class="align-self-center padding-rg-10" alt="">
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'Maceio'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Maceio"
+                          class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
                         </a>
@@ -1967,7 +1975,9 @@
                     <div class="font-25-20 color-53b7f2 bold text-right d-flex align-self-end line-height-1">
 
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-53b7f2 bold decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'PortoGalinhas'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoGalinhas"
+                          class="font-25-20 color-53b7f2 bold decoration-none" href="">
                           Próximo<br />
                           destino
                         </a>
@@ -2423,7 +2433,9 @@
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft-min.png"
                         class="align-self-center padding-rg-10" alt="">
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'Natal'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Natal"
+                          class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
                         </a>
@@ -2432,7 +2444,9 @@
                     <div class="font-25-20 color-53b7f2 bold text-right d-flex align-self-end line-height-1">
 
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-53b7f2 bold decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'PortoSeguro'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoSeguro"
+                          class="font-25-20 color-53b7f2 bold decoration-none" href="">
                           Próximo<br />
                           destino
                         </a>
@@ -2883,7 +2897,9 @@
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft-min.png"
                         class="align-self-center padding-rg-10" alt="">
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'PortoGalinhas'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoGalinhas"
+                          class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
                         </a>
@@ -2892,7 +2908,9 @@
                     <div class="font-25-20 color-53b7f2 bold text-right d-flex align-self-end line-height-1">
 
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-53b7f2 bold decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'Serra'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Serra"
+                          class="font-25-20 color-53b7f2 bold decoration-none" href="">
                           Próximo<br />
                           destino
                         </a>
@@ -3349,7 +3367,9 @@
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowLeft-min.png"
                         class="align-self-center padding-rg-10" alt="">
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-ffffff normal decoration-none" href="">
+                        <a onclick="changeDestiny({id: 'PortoSeguro'})"
+                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoSeguro"
+                          class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
                         </a>
@@ -3358,14 +3378,14 @@
                     <div class="font-25-20 color-53b7f2 bold text-right d-flex align-self-end line-height-1">
 
                       <div>
-                        <a href="javascript:void()" class="font-25-20 color-53b7f2 bold decoration-none" href="">
+                        <div class="font-25-20 linkDstv  bold decoration-none" href="">
                           Próximo<br />
                           destino
-                        </a>
+                        </div>
                       </div>
                       </a>
                       <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/arrowRight-min.png"
-                        class="align-self-center padding-lf-10" alt="">
+                        class="align-self-center linkDstv padding-lf-10" style="opacity: 0.1;" alt="">
                     </div>
                   </div>
                 </div>
