atualizando com restante das páginas

--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
 
                       <div>
                         <a onclick="changeDestiny({id: 'Maceio'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Maceio"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#Maceio"
                           class="font-25-20 color-53b7f2 bold decoration-none">
                           Próximo<br />
                           destino
@@ -1503,7 +1503,7 @@
                         class="align-self-center padding-rg-10" alt="">
                       <div>
                         <a onclick="changeDestiny({id: 'Foz'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Foz"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#Foz"
                           class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
@@ -1514,7 +1514,7 @@
 
                       <div>
                         <a onclick="changeDestiny({id: 'Natal'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Natal"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#Natal"
                           class="font-25-20 color-53b7f2 bold decoration-none">
                           Próximo<br />
                           destino
@@ -1965,7 +1965,7 @@
                         class="align-self-center padding-rg-10" alt="">
                       <div>
                         <a onclick="changeDestiny({id: 'Maceio'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Maceio"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#Maceio"
                           class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
@@ -1976,7 +1976,7 @@
 
                       <div>
                         <a onclick="changeDestiny({id: 'PortoGalinhas'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoGalinhas"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#PortoGalinhas"
                           class="font-25-20 color-53b7f2 bold decoration-none" href="">
                           Próximo<br />
                           destino
@@ -2434,7 +2434,7 @@
                         class="align-self-center padding-rg-10" alt="">
                       <div>
                         <a onclick="changeDestiny({id: 'Natal'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Natal"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#Natal"
                           class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
@@ -2445,7 +2445,7 @@
 
                       <div>
                         <a onclick="changeDestiny({id: 'PortoSeguro'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoSeguro"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#PortoSeguro"
                           class="font-25-20 color-53b7f2 bold decoration-none" href="">
                           Próximo<br />
                           destino
@@ -2898,7 +2898,7 @@
                         class="align-self-center padding-rg-10" alt="">
                       <div>
                         <a onclick="changeDestiny({id: 'PortoGalinhas'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoGalinhas"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#PortoGalinhas"
                           class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
@@ -2909,7 +2909,7 @@
 
                       <div>
                         <a onclick="changeDestiny({id: 'Serra'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#Serra"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#Serra"
                           class="font-25-20 color-53b7f2 bold decoration-none" href="">
                           Próximo<br />
                           destino
@@ -3368,7 +3368,7 @@
                         class="align-self-center padding-rg-10" alt="">
                       <div>
                         <a onclick="changeDestiny({id: 'PortoSeguro'})"
-                          href="http://localhost:8888/Arquivos/tudoazul/CAMPANHAS/SandBox/azul-viagens-055bb/lp055b/#PortoSeguro"
+                          href="https://tudoazul.voeazul.com.br/web/azul/azul-viagens#PortoSeguro"
                           class="font-25-20 color-ffffff normal decoration-none" href="">
                           Destino<br />
                           anterior
