atualizando com restante das páginas

--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
                         &nbsp;&nbsp;Hotéis
                       </div>
                     </a>
-                    <a class="activeBall position-relative" href="https://www.azulviagens.com.br/">
+                    <a class="activeBall position-relative" href="https://www.voeazul.com.br/">
                       <div class="normal font-35-30 color-53b7f2 padding-0-8">
                         &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
                       </div>
@@ -1484,7 +1484,7 @@
                         &nbsp;&nbsp;Hotéis
                       </div>
                     </a>
-                    <a class="activeBall position-relative" href="https://www.azulviagens.com.br/">
+                    <a class="activeBall position-relative" href="https://www.voeazul.com.br/">
                       <div class="normal font-35-30 color-53b7f2 padding-0-8">
                         &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
                       </div>
@@ -1648,12 +1648,11 @@
                       <a
                         href="https://www.azulviagens.com.br/services/results.aspx?destinationID=743&paxs=20&endDate=2021-01-30&accion=searchservices&startDate=2020-10-22#?name=Natal">
                         <span class="bold color-0d1e3d font-25-20 line-height-1">
-                          do Natal Luz.<br class="md-hide" />
-                          Vá passear
+                          Vá passear<br class="md-hide" />
                           de buggy ou quadriciclos.<br /><br />
                         </span>
 
-                        <span class="normal color-6d6e71 font-20-18">
+                        <span class="bold color-0d1e3d font-25-20 line-height-1">
                           Ou de barcos <br />
                           e lanchas.
 
@@ -1946,7 +1945,7 @@
                         &nbsp;&nbsp;Hotéis
                       </div>
                     </a>
-                    <a class="activeBall position-relative" href="https://www.azulviagens.com.br/">
+                    <a class="activeBall position-relative" href="https://www.voeazul.com.br/">
                       <div class="normal font-35-30 color-53b7f2 padding-0-8">
                         &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
                       </div>
@@ -2158,8 +2157,10 @@
                         <span class="bold color-0d1e3d">Reserve o hotel
                           o quanto antes.</span>
                         Até o mês de setembro, todos eles funcionarão
-                        com apenas 50% da capacidade de seus apartamentos. E faça check-in e check-out on-line para
-                        evitar filas e contato físico.
+                        com apenas 50% da capacidade de seus apartamentos. <br />
+                        E faça check-in e <br />
+                        check-out on-line
+                        para evitar filas e contato físico.
                       </div>
                     </div>
                     <div
@@ -2349,7 +2350,7 @@
 
                   <div class="spacer-30"></div>
                   <a
-                    href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=1455&originID=38979&packageType=D3N&packageID=1&paxs=20&startDate=07/11/2020&endDate=14/11/2020">
+                    href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=9969&originID=38979&packageType=D3N&packageID=1&paxs=20&startDate=08/11/2020&endDate=15/11/2020">
                     <div class="btnDefault div-link">Saiba mais</div>
                   </a>
                 </div>
@@ -2415,7 +2416,7 @@
                         &nbsp;&nbsp;Hotéis
                       </div>
                     </a>
-                    <a class="activeBall position-relative" href="https://www.azulviagens.com.br/">
+                    <a class="activeBall position-relative" href="https://www.voeazul.com.br/">
                       <div class="normal font-35-30 color-53b7f2 padding-0-8">
                         &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
                       </div>
@@ -2879,7 +2880,7 @@
                         &nbsp;&nbsp;Hotéis
                       </div>
                     </a>
-                    <a class="activeBall position-relative" href="https://www.azulviagens.com.br/">
+                    <a class="activeBall position-relative" href="https://www.voeazul.com.br/">
                       <div class="normal font-35-30 color-53b7f2 padding-0-8">
                         &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
                       </div>
@@ -3349,7 +3350,7 @@
                         &nbsp;&nbsp;Hotéis
                       </div>
                     </a>
-                    <a class="activeBall position-relative" href="https://www.azulviagens.com.br/">
+                    <a class="activeBall position-relative" href="https://www.voeazul.com.br/">
                       <div class="normal font-35-30 color-53b7f2 padding-0-8">
                         &nbsp;&nbsp;Passagens Aéreas <strong>Azul</strong>
                       </div>
@@ -3501,7 +3502,7 @@
                     var follow = document.querySelector("#upper-menu .follow");
                     var container = document.createElement('span');
                     var htmlContent =
-                      "<button class='btn btn-secondary upper-menu__check-booking-button' type='button' style='border:none;'><a class='js-open-window' href='https://azul.custhelp.com/app/chat/chat_launch/skill/27/form/1' style='margin-left:20px; text-decoration:none;' target='_blank'><span class='glyphicon glyphicon-bubble' style='color: #13b5ea; font-size: 20px;'></span><span class='visible-lg-inline' style='text-align:middle; color:#777'>Chat Online</span></a></button>";
+                      "<button class='btn btn-secondary upper-menu__check-booking-button' type='button' style='border:none;'><a class='js-open-window' href='https://azul.custhelp.com/app/chat/chat_launch/skill/27/form/1' style='margin-left:20px; text-decoration:none;' target='_blank'><span class='glyphicon glyphicon-bubble' style='color: #13b5ea; font-size: 20px;'></span><span class='visible-lg-inline' style='text-align:middle; color:#777'>Chat on-line</span></a></button>";
                     container.innerHTML = htmlContent;
                     follow.parentNode.insertBefore(container, follow.nextSibling)
                   }
