--- a/index.html
+++ b/index.html
@@ -671,17 +671,12 @@
                   <a
                     href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
                     <div class="ListDestinParagraph normal color-6d6e71 font-25-20 max-width-410">
-                      Levar você para conhecer <br class="md-hide" />
-                      cada cantinho do Brasil <br class="md-hide" />
-                      com a qualidade e segurança <br class="md-hide" />
-                      é fundamental para nós. <br class="md-hide" />
-                      Depois de se surpreender com <br class="md-hide" />
-                      os pacotes da Azul Viagens, <br class="md-hide" />
-                      você vai se surpreender ainda <br class="md-hide" />
-                      mais com as Cataratas do <br class="md-hide" />
-                      Iguaçu e outras maravilhas. <br class="md-hide" />
-                      Volte a viajar em grande estilo e <br class="md-hide" />
-                      em boa cia.
+
+                      Levar você para conhecer cada cantinho do Brasil com qualidade e segurança
+                      é fundamental para nós. Depois de se surpreender com os pacotes da <strong>Azul</strong>
+                      Viagens, você vai se surpreender ainda mais com as Cataratas do Iguaçu e
+                      outras maravilhas. Volte a viajar em grande estilo e boa companhia.
+
                     </div>
                   </a>
                 </div>
@@ -707,10 +702,7 @@
 
                   <div
                     class="col-xs-12 col-md-8 padding0 padding-top-50 md-padding-top-50 md-padding-left-20 font-60-40 color-ffffff bold line-height-1 text-shadow-fff">
-                    As águas vão <br class="md-hide" />
-                    rolar enquanto <br class="md-hide" />
-                    você aproveita <br class="md-hide" />
-                    essa vista.<br class="md-hide" />
+                    As águas vão rolar enquanto você aproveita essa vista.
 
                   </div>
                   <div class="col-xs-12 col-md-4 padding0">
@@ -718,29 +710,41 @@
                       class="max-width-280 md-max-width-100-per padding-ld-30 min-height-800 md-min-height-500 mb-min-height-470 padding-top-50 md-padding-top-50 bck-fff md-boxOpacity">
                       <a href="https://www.azulviagens.com.br/hotels/">
                         <span class="bold color-53b7f2 font-25-20 line-height-1">
-                          Encante-se
-                          a céu aberto.
-                          <br /><br />
+                          Encante-se a céu aberto.
+                          <br />
                         </span>
                       </a>
                       <span class="d-block padding-bottom-5"></span>
                       <a href="https://www.azulviagens.com.br/hotels/">
                         <span class="normal color-6d6e71 font-20-18">
-
-                          Aviste a beleza ímpar das Cataratas do Iguaçu, da usina de Itaipu e do Parque das Aves sempre
-                          com máscara e mãos limpas.<br /><br />
+                          Aviste a beleza ímpar das Cataratas do Iguaçu, da
+                          usina de Itaipu e do Parque das Aves sempre com máscara e mãos limpas.<br /><br />
                         </span>
                       </a>
                       <a
                         href="https://www.azulviagens.com.br/services/results.aspx?destinationID=743&paxs=20&endDate=2021-01-30&accion=searchservices&startDate=2020-10-22#?name=Natal">
                         <span class="bold color-0d1e3d font-25-20 line-height-1">
-                          Conheça outras <br class="md-hide" />
-                          culturas.<br /><br />
+                          Conheça outras culturas.<br />
                         </span>
 
                         <span class="normal color-6d6e71 font-20-18">
-                          Vá às compras <br />
-                          com segurança.
+                          Veja a possibilidade de agendar visitas ou comprar
+                          ingresso on-line para templos, atrações turísticas e outros locais fechados.<br /><br />
+                        </span>
+
+                      </a>
+
+
+                      <a
+                        href="https://www.azulviagens.com.br/services/results.aspx?destinationID=743&paxs=20&endDate=2021-01-30&accion=searchservices&startDate=2020-10-22#?name=Natal">
+                        <span class="bold color-0d1e3d font-25-20 line-height-1">
+                          Passeie com segurança.<br />
+                        </span>
+
+                        <span class="normal color-6d6e71 font-20-18">
+                          Em lojas de conveniência ou souvenirs, a
+                          permanência máxima será 30% da capacidade de clientes. E em hotéis, faça o
+                          check-in on-line.<br />
                         </span>
 
                       </a>
@@ -780,7 +784,7 @@
                         <span class="bold color-0d1e3d">Use máscara.</span> <br />
                         A obrigatoriedade é válida para
                         trabalhadores e visitantes.
-                        Faça a sua para tudo correr da melhor forma.
+                        Faça sua para tudo correr da melhor forma.
                       </div>
                     </div>
                     <div
@@ -790,10 +794,9 @@
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Veja se está tudo bem. </span><br />
-                        Turistas sintomáticos serão testados para COVID-19 e, nos casos positivos, isolados por
-                        14 dias, devendo
-                        arcar com os custos
-                        de hospedagem.
+                        Turistas sintomáticos serão testados para COVID-19
+                        e, nos casos positivos, isolados por 14 dias, devendo arcar com os custos de
+                        hospedagem.
                       </div>
                     </div>
                     <div
@@ -803,8 +806,8 @@
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
                         <span class="bold color-0d1e3d">Baixe o app CovidPR.</span> <br />
-                        Nele é possível fazer uma autoavaliação dos sintomas da doença para apresentar
-                        na entrada dos atrativos turísticos.
+                        Nele é possível fazer uma autoavaliação dos sintomas
+                        da doença para ser apresentada na entrada dos atrativos turísticos.
                       </div>
                     </div>
                   </div>
@@ -1135,10 +1138,9 @@
                     href="http://www.azulviagens.com.br/packagesV3/results.aspx?accion=searchMasters&destinationID=743&originID=39497&packageType=D3N&packageID=1&paxs=20&startDate=01/10/2020&endDate=04/10/2020">
                     <div class="ListDestinParagraph normal color-6d6e71 font-25-20">
 
-                      Voltar a viajar pelo Brasil com você é um sonho prestes a se realizar. <br class="md-hide" />
-                      A capital alagoana te espera com todo o conforto e segurança <br class="md-hide" />
-                      para tornar sua experiência única. E melhor ainda, <br class="md-hide" />
-                      quando tem o toque especial dos pacotes da Azul Viagens, né?<br class="md-hide" />
+                      Voltar a viajar pelo Brasil com você é um sonho prestes a se realizar. A capital
+                      alagoana te espera com todo o conforto e segurança para tornar sua
+                      experiência única, com um toque especial da <strong>Azul</strong> Viagens.
 
                     </div>
                   </a>
@@ -1166,8 +1168,7 @@
 
                   <div
                     class="col-xs-12 col-md-8 padding0 padding-top-50 md-padding-top-50 md-padding-left-20 font-60-40 color-ffffff bold line-height-1 text-shadow-fff">
-                    Desfrute o <br class="md-hide" />
-                    Caribe brasileiro.<br class="md-hide" />
+                    Desfrute o Caribe brasileiro.<br />
                   </div>
                   <div class="col-xs-12 col-md-4 padding0">
                     <div
@@ -1182,22 +1183,34 @@
                       <a href="https://www.azulviagens.com.br/hotels/">
                         <span class="normal color-6d6e71 font-20-18">
 
-                          para explorar praias paradisíacas partindo da cidade. Apenas se atente aos protocolos
-                          de segurança e evite grupos com mais
-                          de quatro pessoas.<br /><br />
+                          para explorar praias paradisíacas partindo da cidade.
+                          Atente-se aos protocolos de segurança e evite grupos com mais de quatro
+                          pessoas.<br /><br />
                         </span>
                       </a>
                       <a
                         href="https://www.azulviagens.com.br/services/results.aspx?destinationID=743&paxs=20&endDate=2021-01-30&accion=searchservices&startDate=2020-10-22#?name=Natal">
                         <span class="bold color-0d1e3d font-25-20 line-height-1">
-                          Tire muitas fotos <br />
-                          no mirante<br />
+                          Tire muitas fotos no mirante<br />
                         </span>
 
                         <span class="normal color-6d6e71 font-20-18">
-                          Curta tudo <br />
-                          à beira-mar:<br />
+                          da quase deserta Praia do Carro Quebrado, com
+                          falésias fascinantes, ideais para um registro incrível.<br /><br />
+                        </span>
 
+                      </a>
+
+                      <a
+                        href="https://www.azulviagens.com.br/services/results.aspx?destinationID=743&paxs=20&endDate=2021-01-30&accion=searchservices&startDate=2020-10-22#?name=Natal">
+                        <span class="bold color-0d1e3d font-25-20 line-height-1">
+                          Curta tudo à beira-mar<br />
+                        </span>
+
+                        <span class="normal color-6d6e71 font-20-18">
+                          como restaurantes e barracas, em meio a águas
+                          cristalinas e culinária impecável. Mas respeite sempre a distância social mínima
+                          estabelecida pela OMS.<br /><br />
                         </span>
 
                       </a>
@@ -1234,10 +1247,9 @@
                         <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoFoz1-min.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
-                        <span class="bold color-0d1e3d">Use máscara.</span> <br />
-                        A obrigatoriedade é válida para
-                        trabalhadores e visitantes.
-                        Faça a sua para tudo correr da melhor forma.
+                        <span class="bold color-0d1e3d">Restrições e flexibilidade</span> <br />
+                        De junho a agosto, o Estado de Alagoas flexibilizará as atividades aos poucos,
+                        a fim de preservar a saúde de turistas e moradores.
                       </div>
                     </div>
                     <div
@@ -1246,11 +1258,9 @@
                         <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoFoz2-min.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
-                        <span class="bold color-0d1e3d">Veja se está tudo bem. </span><br />
-                        Turistas sintomáticos serão testados para COVID-19 e, nos casos positivos, isolados por
-                        14 dias, devendo
-                        arcar com os custos
-                        de hospedagem.
+                        <span class="bold color-0d1e3d">Isolamento social</span><br />
+                        Procure chegar com antecedência a aeroportos, hotéis e restaurantes,
+                        evitando, assim, filas e aglomerações.
                       </div>
                     </div>
                     <div
@@ -1259,9 +1269,9 @@
                         <img src="https://tudoazul.voeazul.com.br/documents/26002/763575/IcoFoz3-min.png" alt="">
                       </div>
                       <div class="HealthFirstParagraph color-6d6e71 font-25-20 normal line-height-1-2">
-                        <span class="bold color-0d1e3d">Baixe o app CovidPR.</span> <br />
-                        Nele é possível fazer uma autoavaliação dos sintomas da doença para apresentar
-                        na entrada dos atrativos turísticos.
+                        <span class="bold color-0d1e3d">Fique ligado ao novo normal</span> <br />
+                        Estamos em um momento de constantes mudanças. Por isso, conhecer a
+                        situação de cada destino é indispensável.
                       </div>
                     </div>
                   </div>
